# stock-analyzer

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml  test.db  test2.db  test3.db
.claude/: settings.local.json
.serena/: project.yml
config/: settings.py
docs/plans/: 2026-02-25-stock-analyzer-design.md  2026-02-25-stock-analyzer-impl.md  2026-02-26-portfolio-screening-design.md  2026-02-26-portfolio-screening-impl.md
sql/: init.sql
src/: app.py
src/ai/: __init__.py  client.py  prompts.py
src/analysis/: fundamental.py  indicators.py  technical.py
src/data/: base.py  futu_provider.py  repository.py  tushare_provider.py  yfinance_provider.py
src/models/: __init__.py  portfolio.py  schemas.py  screening.py
src/monitor/: alerts.py  scheduler.py
src/pages/: 1_📊_自选股.py  2_📈_技术分析.py  3_📄_基本面.py  4_🔔_监控预警.py  5_💬_AI助手.py  6_💼_组合管理.py  7_🔍_量化选股.py  __init__.py
src/portfolio/: __init__.py  account_manager.py  position_service.py  transaction_service.py
src/screening/: __init__.py  screener.py  strategies.py
tests/: test_account_manager.py  test_ai_client.py  test_fundamental.py  test_futu_provider.py  test_indicators.py  test_models.py  test_portfolio_models.py  test_portfolio_repository.py  test_position_service.py  test_repository.py  test_screener.py  test_screening_models.py  test_strategies.py  test_technical.py  test_transaction_service.py  test_tushare_provider.py  test_yfinance_provider.py
