[project]
name = "stock-analyzer"
version = "0.1.0"
description = "股票分析平台 - 支持A股、港股、美股"
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit>=1.30",
    "tushare>=1.4.0",
    "futu-api>=6.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "pandas-ta>=0.3.14",
    "openai>=1.0",
    "plotly>=5.18",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
